--- a/style.css
+++ b/style.css
@@ -84,7 +84,7 @@ nav ul li a:hover {
 .product-img {
   float:left;
   padding:20px;
-  max-width:400px;
+  width:400px;
 }
 a{
   text-decoration:none;
